correções de problemas no cadastro de comentários na api do projeto Event+ com React.js
