# 2-Semestre/React/Event+/api/webapi.event+/bin/Release/net7.0/swagger.json
@@ -25,7 +25,6 @@
         "tags": [
           "ComentariosEvento"
         ],
-        "summary": "Cadastro pela IA",
         "consumes": [
           "application/json-patch+json",
           "application/json",
@@ -36,7 +35,6 @@
           {
             "in": "body",
             "name": "body",
-            "description": "",
             "schema": {
               "$ref": "#/definitions/ComentariosEvento"
             }
@@ -84,17 +82,11 @@
         ],
         "parameters": [
           {
-            "in": "query",
-            "name": "idEvento",
-            "type": "string",
-            "format": "uuid",
-            "collectionFormat": "multi"
-          },
-          {
             "in": "path",
             "name": "id",
             "required": true,
-            "type": "string"
+            "type": "string",
+            "format": "uuid"
           }
         ],
         "responses": {
